--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.57.0",
     "react-router": "^7.6.1",
+    "react-router-dom": "^7.6.1",
     "recharts": "^2.15.3",
     "tailwindcss": "^4.1.8"
   },
