--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.57.0",
     "react-router": "^7.6.1",
     "react-router-dom": "^7.6.1",
+    "react-select": "^5.10.1",
     "recharts": "^2.15.3",
     "tailwindcss": "^4.1.8"
   },
